--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,14 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:1.0.0"
     testImplementation "android.arch.core:core-testing:1.0.0"
     testImplementation "android.arch.persistence.room:testing:1.0.0"
+
+    // Dagger2
+    implementation 'com.google.dagger:dagger-android:2.14.1'
+    implementation 'com.google.dagger:dagger-android-support:2.14.1'
+    kapt 'com.google.dagger:dagger-compiler:2.14.1'
+    kapt 'com.google.dagger:dagger-android-processor:2.14.1'
+
+    // RxJava2
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
